--- a/smart-curr-clr/smart-curr-clr.vcxproj
+++ b/smart-curr-clr/smart-curr-clr.vcxproj
@@ -137,6 +137,8 @@
     <Text Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="ItlSSP.h" />
+    <ClInclude Include="ItlSystemPort.h" />
     <ClInclude Include="resource.h" />
     <ClInclude Include="stdafx.h" />
   </ItemGroup>
